# sandbox

./: .bazelrc  .gitignore  WORKSPACE
algorithms/function_approximation/: lookup_table.py
algorithms/leetcode_two_sum/: BUILD
algorithms/leetcode_two_sum/src/: main.cpp
algorithms/mandelbrot/: BUILD  mandelbrot.py  requirements.txt
algorithms/sorting/: BUILD
algorithms/sorting/src/: sort.cpp
algorithms/sorting/test/: sort_spec.cpp
bazel/python/: BUILD
linux/debian/: README.md  dreisatt.gpg.key  hello-niko-runner.deb  helloniko.deb
linux/shared_memory/: CMakeLists.txt
linux/shared_memory/include/shared_memory/: shared_memory_base.h  shared_memory_consumer.h  shared_memory_provider.h
linux/shared_memory/src/: consumer.cpp  provider.cpp  shared_memory_base.cpp  shared_memory_consumer.cpp  shared_memory_provider.cpp
mandelbrot/: BUILD
multi_threading/: BUILD  spin_lock.cpp  spin_lock.hpp
multi_threading/test/: spin_lock_spec.cpp
react_app/: BUILD  index.html  main.ts  package.json  tsconfig.json  webpack.config.js
react_app/frontend/: BLUB  app.tsx  main.tsx
react_app/frontend/config/: BUILD
react_app/model/: BUILD  friend.proto  index.ts
react_app/styles/: BUILD  styles.scss
splines/: BUILD  bezier_spline.py  bspline.py  cubic_spline.py  cubic_spline_runner.py  hermite_spline.py  interpolation_polynomial.py  lookup_table.py  new_cubic_spline.py  polynomial_spline.py  requirements.txt
web_server/: BUILD  package.json  server.js
web_server/lighttpd/: README.md  lighttpd.conf
web_server/root/: index.html
web_server/root/js/: main.js
(+9 files in other folders)
